# text2graph_llm

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Modelfile  README.md  chtc_job.sub  chtc_run.sh  docker-compose-cosmos.yml  docker-compose-olvi.yml  docker-compose-quickstart.yml  docker-compose.yml  example.env  extract_entity.py  main.py  pyproject.toml  pytest.ini  working.ipynb
.devcontainer/: dev_requirements.txt  devcontainer.json
.github/workflows/: containerize_chtc.yml
api/: Dockerfile  engine.py  main.py  readme.md  requirements.txt
chtc/: Dockerfile  Modelfile  db.py  debug_job.sub  example.env  job.py  job.sh  job.sub  main.sh  preprocess_extraction_direct.py  requirements.txt  slack.py  wal_mode.py
chtc/scirpts/: containerize.sh  link_staging.sh  rsync_to_staging.sh
chtc/scripts/: monitor.sh  turso_snippets.sh
data/: eval.db  testset_micro.parquet.gzip
data/results_240208/: problematic.parquet.gzip
demo/: Dockerfile  macrostrat.py  main.py  requirements.txt
experimental/: fructose.py
experimental/templates/: sys_prompt_v0.jinja
experiments/entitiy_alignment/v0/: closest_known_entities_v0.xlsx  entities.db  (+3 more)
notebooks/: GKM-conversion.ipynb  example_api.ipynb  geocodeapi_demo.ipynb  geolocation_demo.ipynb  gkm_scratch.ipynb  location_and_geo_entities.ipynb  mock_usgs_retriever.ipynb  paragraphs_with_proximal_locations_and_stratnames.ipynb  patch_turso.ipynb  prompt_tune_old_240315.ipynb  provenance_retriever_to_triplet_ttl.ipynb  test_fructose.ipynb  usage_api_endpoint.ipynb
notebooks/devs/: GKM-conversion.ipynb  batch_inference_olvi.ipynb  benchmark_vllm.ipynb  elemetal_filter.ipynb  geolocation_demo.ipynb  lemmatization.ipynb  location_and_geo_entities.ipynb  minerals.ipynb  mock_usgs_retriever.ipynb
notebooks/users/: quickstart_api.ipynb
scripts/: install_compose.sh  package.sh  rsync_to_staging.sh  run_llm_entity_extract.sh  run_on_olvi.sh  watch_log.sh
test/: conftest.py  test_llm.py
tests/: conftest.py  test_alignment.py  test_api.py  test_fast_llm_graph.py  test_geocode.py  test_gkm.py  test_integration.py  test_llm.py  test_prompt.py
tests/fixtures/: test_triplet_to_rdf_mineral.ttl  test_triplet_to_rdf_stratigraphy.ttl
text2graph/: alignment.py  apiutils.py  askxdd.py  database.py  eta.py  gkm.py  lemmatizer.py  llm.py  macrostrat.py  pipeline.py  prompt.py  schema.py  usgs.py  utils.py  xdd.py
text2graph/dict2ttl/: convert.py  entities.py  gkm.py
text2graph/experimental/: extract_entity.py  preproces_extraction.py
text2graph/geolocation/: core.py  geocode.py  macrostrat.py  postprocessing.py  serpapi.py
text2graph/gkm/: convert.py  features.py  gkm.py  namespace.py
text2graph/scripts/: create_test_eval_set.py  launch_create_test_set_eval.sh
(+10 files in other folders)
