[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2graph_llm"
description = "convert text to graph with llm"
dynamic = ["version"]
authors = [
  {name = "Jason Lo", email = "lcmjlo@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

dependencies = [
  "hatchling == 1.21.1",
  "ollama == 0.1.6",
  "requests == 2.31.0",
  "python-dotenv == 1.0.1",
  "pandas == 2.2.0",
  "pyarrow == 15.0.0",
  "tqdm == 4.66.1",
  "tenacity == 8.2.3",
  "nltk == 3.8.1",
  "spacy == 3.7.2",
  "openai == 1.12.0",
]

[project.urls]
Repository = "https://github.com/UW-xDD/text2graph_llm"

[tool.hatch.version]
path = "text2graph/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["text2graph/*.py"]
