[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2graph_llm"
description = "convert text to graph with llm"
dynamic = ["version"]
authors = [
  { name = "Jason Lo", email = "lcmjlo@gmail.com" },
  { name = "Iain McConnell" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "openai == 1.12.0",
  "anthropic == 0.18.1",
  "ollama == 0.1.6",
  "requests == 2.31.0",
  "python-dotenv == 1.0.1",
  "pandas == 2.2.0",
  "pyarrow == 15.0.0",
  "tqdm == 4.66.1",
  "tenacity == 8.2.3",
  "rdflib == 7.0.0",
  "sentence-transformers==2.6.1",
  "weaviate-client==4.5.7",
]

[project.urls]
Repository = "https://github.com/UW-xDD/text2graph_llm"

[tool.hatch.version]
path = "text2graph/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["text2graph/*.py", "text2graph/**/*.py", "text2graph/binaries/*"]

[project.optional-dependencies]
dev = [
  "pre-commit==3.7.0",
  "pytest==7.4.4",
  "pytest-httpx==0.27.0",
  "pytest-asyncio==0.23.6",
  "ipykernel",
  "altair",
  "hatch",
]

chtc = [
  "sqlalchemy-libsql==0.1.0",
  "libsql-experimental==0.0.34",
  "SQLAlchemy==2.0.29",
]
